feat(PM92_java_17): migrate from javax to jakarta